# srishti-ai

./: .claudeignore  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  INSTRUCTIONS.md  LOCAL_PREVIEW.md  PLANO_README.md  README.md  ROUTER.md  TODOS.md  mcp_server.py  next.config.cjs  package-lock.json  package.json  plano_config.yaml  playwright.config.ts  service-worker.js  settings.yaml.example  start-plano.sh  summary.txt  test-plano.sh  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: app-drawer.tsx  autonomous-agent.tsx  chat-input.tsx  chat-message.tsx  cricket-card.tsx  debug-widget.tsx  deployment-panel.tsx  dock.tsx  error-fixer.tsx  folder-picker.tsx  local-preview.tsx  news-card.tsx  preview-panel.tsx  settings-panel.tsx  status-indicator.tsx  tools-panel.tsx  weather-card.tsx
config/: output-format.ts  output-format.yaml
docs/: AGENT_INSTRUCTIONS.md
graphify-out/: .graphify_chunk_02.txt  .graphify_chunk_03.txt  .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
hooks/: use-chat.ts  use-ui-utils.ts
lib/: clients.ts  db.ts  html-wrapper.ts  i18n.ts  intent-detector.ts  intent-keywords.ts  intent-matcher-debug.ts  intent-matcher.ts  rust-tools.ts  safety.ts  server-manager.ts
plans/: nested-stargazing-engelbart.md  sunny-swinging-wombat-agent-af15ce34ad583385a.md  sunny-swinging-wombat.md
public/: sw.js
rust-tools/: Cargo.toml  README.md
rust-tools/src/: lib.rs
scripts/: lighthouse-audit.sh  lighthouse-ci.sh
tests/: chat-routing.spec.ts  (+19 more)
(+43 files in other folders)
