[package]
name = "rust-tools"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.4"
glob = "0.3"
notify = "6.1"
sha2 = "0.10"
hex = "0.4"